--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </html>
 <!--
 <a href="./models/volgatti3.html" class="threejs" target="_blank">volgatti</a>
-<a href="#" class="footer_item">group vk</a>
+<p class="footer_item">group vk</p>
 
 	
 			
