--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	</header>	
 	<footer class="footer">
 		<div class="container">				
-			<a href="#" class="footer_item">raritarium@gmail.com</a>
+			<p class="footer_item">raritarium@gmail.com</p>
 			
 		</div>
 	</footer>
