--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="container">
 			<div class="header__inner">				
 				<nav class="nav">
-					<div class="logo">Raritarium</div>	
+					<div class="logo">Rariterium</div>	
 				</nav>				
 				<div class="cart-items">
 			
