--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <body>
 	<header class="header">		
 		<div class="container">
-			<div class="header__inner">				
+			<div class="header__inner">
+				<p class="email">Rariterium@gmail.com</p>
 				<nav class="nav">
 					<div class="logo">Rariterium</div>	
 				</nav>				
@@ -43,12 +44,9 @@
 			</div>
 		</div>
 	</header>	
-	<footer class="footer">
-		<div class="container">				
-			<p class="footer_item">Rariterium@gmail.com</p>
+		
 			
-		</div>
-	</footer>
+
 
 </body>
 </html>
