--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 <body>
 	<header class="header">		
 		<div class="container">
-			<div class="header__inner">
-				<p class="email">Rariterium@gmail.com</p>
+			<div class="header__inner">									
+				<p class="email">rariterium@gmail.com</p>			
+
 				<nav class="nav">
 					<div class="logo">Rariterium</div>	
 				</nav>				
@@ -44,15 +45,13 @@
 			</div>
 		</div>
 	</header>	
-		
-			
 
 
 </body>
 </html>
 <!--
 <a href="./models/volgatti3.html" class="threejs" target="_blank">volgatti</a>
-<p class="footer_item">group vk</p>
+<a href="#" class="footer_item">group vk</a>
 
 	
 			
