--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<header class="header">		
 		<div class="container">
 			<div class="header__inner">									
-				<p class="email">Контакты: rariterium@gmail.com</p>			
+				<p class="email">Contacts: rariterium@gmail.com</p>			
 
 				<nav class="nav">
 					<div class="logo">Rariterium</div>	
