--- a/models/laz699.html
+++ b/models/laz699.html
@@ -468,6 +468,7 @@
 				//controls.maxAzimuthAngle = 0.05 + Math.PI / 2;
 				controls.minDistance = 1400;
 				controls.maxDistance = 1500;
+				controls.enablePan = false;
 				window.addEventListener( 'resize', onWindowResize, false );
 				//scene.add( new THREE.CameraHelper( light.shadow.camera ) );
 
