--- a/models/ziy9.html
+++ b/models/ziy9.html
@@ -487,6 +487,7 @@
 				//controls.maxAzimuthAngle = 0.05 + Math.PI / 2;
 				controls.minDistance = 1600;
 				controls.maxDistance = 1700;
+				controls.enablePan = false;
 				cubeCamera.update( renderer, scene );
 				window.addEventListener( 'resize', onWindowResize, false );
 				//scene.add( new THREE.CameraHelper( light.shadow.camera ) );
