--- a/models/laz699turist.html
+++ b/models/laz699turist.html
@@ -94,7 +94,7 @@
 				<div class="preloader__third"></div>  
 			</div>
 		</div>
-		<!--<audio src="./../audio/mix.mp3" autoplay loop></audio>-->
+		<audio src="./../audio/mix.mp3" autoplay loop></audio>
 
 
 
@@ -394,7 +394,7 @@
 				controls.minDistance = 1400;
 				controls.maxDistance = 1500;
 				controls.enablePan = false;
-				//controls.autoRotate = true;
+				controls.autoRotate = true;
 				window.addEventListener( 'resize', onWindowResize, false );
 	
 
