--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <body>
 	<header class="header">		
 		<div class="container">
-			<div class="header__inner">									
+			<div class="header__inner">	
+				<audio src="./../audio/mix.mp3" autoplay loop></audio>
 				<p class="email">Contacts: rariterium@gmail.com</p>			
 
 				<nav class="nav">
