--- a/models/laz699turist.html
+++ b/models/laz699turist.html
@@ -94,7 +94,7 @@
 				<div class="preloader__third"></div>  
 			</div>
 		</div>
-		<audio src="./../audio/mix.mp3" autoplay loop></audio>
+		<!--<audio src="./../audio/mix.mp3" autoplay loop></audio>-->
 
 
 
