--- a/models/laz699-festival.html
+++ b/models/laz699-festival.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Лаз 699 turist</title>
+		<title>Лаз 699 festival</title>
 		
 		<style>
 			body { 
